--- a/res/xml/nitrogen_settings.xml
+++ b/res/xml/nitrogen_settings.xml
@@ -17,6 +17,14 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/nitrogen_settings_title" >
 
+        <!-- Animation Settings -->
+        <Preference
+            android:key="animation_settings"
+            android:title="@string/animation_title"
+            android:fragment="com.benzo.settings.animation.AnimationSettings"
+            android:layout="@layout/preference_nitrogen_animations"
+            />
+
         <!-- Status Bar -->
         <Preference
             android:key="statusbar_category"
