--- a/res/values/nitrogen_dimens.xml
+++ b/res/values/nitrogen_dimens.xml
@@ -28,4 +28,10 @@
     <dimen name="shortcut_picker_left_padding">70dip</dimen>
 
     <dimen name="alert_dialog_padding_material">20dp</dimen>
+
+    <!-- Gesture Anywhere -->
+    <dimen name="ga_gesture_thumbnail_inset">8dip</dimen>
+    <dimen name="ga_gesture_thumbnail_size">64dip</dimen>
+    <dimen name="shortcut_picker_left_padding">70dip</dimen>
+
 </resources>
