--- a/res/xml/nitrogen_settings_gestures.xml
+++ b/res/xml/nitrogen_settings_gestures.xml
@@ -58,4 +58,10 @@
         android:title="@string/torch_power_button_gesture_title"
         android:entries="@array/torch_power_button_gesture_entries"
         android:entryValues="@array/torch_power_button_gesture_values" />
+
+    <Preference
+       android:key="gesture_anywhere"
+       android:fragment="com.nitrogen.settings.fragments.GestureAnywhereSettings"
+       android:title="@string/gesture_anywhere_title" />
+
 </PreferenceScreen>
