--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -27,6 +27,7 @@
     <string name="volume_title">Volume rockers</string>
     <string name="notifications_title">Notifications</string>
     <string name="device_part_title">Device features</string>
+    <string name="traffic_title">Traffic indicators</string>
 
     <!-- General strings -->
     <string name="ok">OK</string>
@@ -237,6 +238,15 @@
     <string name="battery_light_medium_color">Medium battery</string>
     <string name="battery_light_full_color">Almost full battery</string>
     <string name="battery_light_reallyfull_color">Full (100) battery</string>
+
+    <!-- Network traffic -->
+    <string name="network_traffic_title">Network traffic</string>
+    <string name="network_traffic_type">Select net activity type</string>
+    <string name="show_network_traffic_up">Outgoing</string>
+    <string name="show_network_traffic_down">Incoming</string>
+    <string name="show_network_traffic_all">Outgoing and Incoming</string>
+    <string name="network_traffic_state_title">Show net activity in statusbar</string>
+    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
 
     <!-- Smart pulldown-->
     <string name="smart_pulldown_title">Smart pulldown</string>
