--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -76,4 +76,9 @@
             android:summary="@string/adb_notify_summary"
             android:defaultValue="true" />
 
+         <Preference
+            android:key="traffic"
+            android:fragment="com.nitrogen.settings.Traffic"
+            android:title="@string/traffic_title" />
+
 </PreferenceScreen>
