--- a/res/xml/nitrogen_settings_notifications.xml
+++ b/res/xml/nitrogen_settings_notifications.xml
@@ -18,6 +18,13 @@
     android:title="@string/notifications_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <ListPreference
+            android:key="ticker_mode"
+            android:entries="@array/ticker_mode_entries"
+            android:entryValues="@array/ticker_mode_values"
+            android:summary="%s"
+            android:title="@string/ticker_mode_title" />
+
     <!-- Heads up -->
     <Preference
         android:key="heads_up_notifications"
