All tile scroller for quickbar settings [2/2]
Signed-off-by: Shekhawat2 <anandsingh215@yahoo.com>

--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -721,4 +721,8 @@
     <string name="ringtone_focus_mode_title">Where to play ringtones from</string>
     <string name="ringtone_focus_mode_dynamic">From headset if connected and playing music</string>
     <string name="ringtone_focus_mode_stock">"From speakerphone (aosp default)"</string>
+
+    <!-- Small quick settings scroller -->
+    <string name="qqs_scroll_title">Scroll small QS tiles</string>
+    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
 </resources>
