--- a/res/xml/nitrogen_settings_gestures.xml
+++ b/res/xml/nitrogen_settings_gestures.xml
@@ -41,11 +41,16 @@
 
     </PreferenceCategory>
 
-
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="pocket_judge"
         android:title="@string/pocket_judge_title"
         android:summary="@string/pocket_judge_summary"
+        android:defaultValue="false" />
+
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+        android:key="three_finger_gesture"
+        android:title="@string/three_finger_gesture"
+        android:summary="@string/three_finger_gesture_summary"
         android:defaultValue="false" />
 
     <ListPreference
