--- a/res/xml/nitrogen_settings_notifications.xml
+++ b/res/xml/nitrogen_settings_notifications.xml
@@ -18,6 +18,12 @@
     android:title="@string/notifications_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+      <PreferenceScreen
+        android:key="rr_notif"
+        android:fragment="com.nitrogen.settings.fragments.NotificationSettings"
+        android:title="@string/rr_notif_settings_title"
+        android:summary="@string/rr_notif_settings_summary" />
+
     <!-- Ticker -->
     <Preference
        android:key="ticker_mode"
