--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -25,6 +25,12 @@
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
     </Preference>
 
+    <Preference
+            android:key="carrier_label"
+            android:fragment="com.nitrogen.settings.fragments.CarrierLabel"
+            android:icon="@drawable/ic_carrierlabel"
+            android:title="@string/carrierlabel_title" />
+
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
