--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -26,6 +26,11 @@
     </Preference>
 
     <Preference
+        android:key="status_bar_clock"
+        android:fragment="com.nitrogen.settings.fragments.StatusBarClockSettings"
+        android:title="@string/status_bar_clock_title" />
+
+    <Preference
             android:key="carrier_label"
             android:fragment="com.nitrogen.settings.fragments.CarrierLabel"
             android:icon="@drawable/ic_carrierlabel"
