--- a/res/xml/nitrogen_settings.xml
+++ b/res/xml/nitrogen_settings.xml
@@ -22,8 +22,7 @@
             android:key="animation_settings"
             android:title="@string/animation_title"
             android:fragment="com.benzo.settings.animation.AnimationSettings"
-            android:layout="@layout/preference_nitrogen_animations"
-            />
+            android:icon="@drawable/ic_animation" />
 
         <!-- Status Bar -->
         <Preference
