--- a/res/xml/nitrogen_settings_button.xml
+++ b/res/xml/nitrogen_settings_button.xml
@@ -23,6 +23,12 @@
         android:fragment="com.nitrogen.settings.fragments.VolumeRockerSettings"
         android:title="@string/volume_title" />
 
+    <Preference
+        android:key="global_actions"
+        android:title="@string/global_actions_title"
+        android:summary="@string/global_actions_summary"
+        android:fragment="com.nitrogen.settings.fragments.GlobalActionsSettings" />
+
     <PreferenceCategory
         android:key="hardware_keys"
         android:title="@string/hardware_keys_category" >
