--- a/res/xml/animation_settings.xml
+++ b/res/xml/animation_settings.xml
@@ -25,6 +25,12 @@
         android:fragment="com.benzo.settings.animation.AnimationControls" />
 
     <ListPreference
+        android:key="screen_off_animation"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values" />
+
+    <ListPreference
         android:key="toast_animation"
         android:title="@string/toast_animation_title"
         android:entries="@array/toast_animation_entries"
