--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -36,6 +36,12 @@
             android:title="@string/carrierlabel_title" />
 
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
             android:summary="@string/status_bar_toggle_brightness_summary"
