--- a/res/xml/nitrogen_settings_lockscreen.xml
+++ b/res/xml/nitrogen_settings_lockscreen.xml
@@ -37,6 +37,12 @@
         android:defaultValue="false" />
 
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_visualizer"
+        android:title="@string/lockscreen_visualizer_title"
+        android:summary="@string/lockscreen_visualizer_summary"
+        android:defaultValue="false" />
+
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
