--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -758,4 +758,8 @@
     <string name="onthego_alpha_title">On-The-Go Alpha</string>
     <string name="onthego_alpha_summary">Alpha value of the On-The-Go overlay.</string>
     <string name="powermenu_ls_onthego_summary" >Show On-The-Go option on the lockscreen</string>
+
+     <!-- LockScreen Visualizer -->
+    <string name="lockscreen_visualizer_title">Lockscreen Visualizer</string>
+    <string name="lockscreen_visualizer_summary">Show Music Visualizer on Lockscreen</string>
 </resources>
