--- a/res/xml/nitrogen_settings_lockscreen.xml
+++ b/res/xml/nitrogen_settings_lockscreen.xml
@@ -43,6 +43,13 @@
         android:defaultValue="false" />
 
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_visualizer"
+        android:title="@string/ambient_visualizer_title"
+        android:summary="@string/ambient_visualizer_summary"
+        android:dependency="lockscreen_media_metadata"
+        android:defaultValue="false"/>
+
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
         android:summary="@string/lockscreen_battery_info_summary"
