--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -35,6 +35,12 @@
             android:fragment="com.nitrogen.settings.fragments.CarrierLabel"
             android:title="@string/carrierlabel_title" />
 
+    <Preference
+            android:key="battery_bar_category"
+            android:fragment="com.nitrogen.settings.fragments.BatteryBar"
+            android:title="@string/battery_bar_title"
+            android:summary="@string/battery_bar_summary" />
+
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
             android:key="show_fourg_icon"
             android:title="@string/show_fourg_icon_title"
