--- a/res/xml/battery_bar.xml
+++ b/res/xml/battery_bar.xml
@@ -16,32 +16,25 @@
         android:entries="@array/battery_bar_no_navbar_entries"
         android:entryValues="@array/battery_bar_no_navbar_values" />
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="statusbar_battery_bar_color"
-        android:title="@string/battery_bar_color"
-        android:defaultValue="0xffffffff" />
+    <com.nitrogen.settings.preferences.CustomSeekBarPreference
+        android:key="statusbar_battery_bar_thickness"
+        android:title="@string/battery_bar_thickness_title"
+        android:max="4"
+        settings:min="1"
+        settings:units="dp"
+        android:persistent="false" />
 
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="statusbar_battery_bar_battery_low_color"
-        android:title="@string/battery_bar_battery_low_color"
-        android:defaultValue="0xffffffff" />
-
-    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
-        android:key="statusbar_battery_bar_enable_charging_color"
-        android:title="@string/battery_bar_use_charging_color"
-        android:defaultValue="true" />
-
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="statusbar_battery_bar_charging_color"
-        android:title="@string/battery_bar_charging_color"
-        android:defaultValue="0xffffff00"
-        android:dependency="statusbar_battery_bar_enable_charging_color" />
+    <ListPreference
+        android:key="statusbar_battery_bar_style"
+        android:title="@string/battery_bar_style_title"
+        android:entries="@array/battery_bar_style_entries"
+        android:entryValues="@array/battery_bar_style_values" />
 
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="statusbar_battery_bar_blend_color"
         android:title="@string/battery_bar_blend_color_title"
         android:summary="@string/battery_bar_blend_color_summary"
-        android:defaultValue="false" />
+        android:defaultValue="true" />
 
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="statusbar_battery_bar_blend_color_reverse"
@@ -51,22 +44,29 @@
         android:dependency="statusbar_battery_bar_blend_color"
         android:defaultValue="false" />
 
-    <ListPreference
-        android:key="statusbar_battery_bar_style"
-        android:title="@string/battery_bar_style_title"
-        android:entries="@array/battery_bar_style_entries"
-        android:entryValues="@array/battery_bar_style_values" />
+    <net.margaritov.preference.colorpicker.ColorPickerPreference 
+        android:key="statusbar_battery_bar_color"
+        android:title="@string/battery_bar_color"
+        android:defaultValue="0xff76c124" />
 
-    <com.nitrogen.settings.preferences.CustomSeekBarPreference
-        android:key="statusbar_battery_bar_thickness"
-        android:title="@string/battery_bar_thickness_title"
-        android:max="4"
-        settings:min="1"
-        settings:units="dp"
-        android:persistent="false" />
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="statusbar_battery_bar_battery_low_color"
+        android:title="@string/battery_bar_battery_low_color"
+        android:defaultValue="0xfff90028" />
 
-    <SwitchPreference
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+        android:key="statusbar_battery_bar_enable_charging_color"
+        android:title="@string/battery_bar_use_charging_color"
+        android:defaultValue="true" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="statusbar_battery_bar_charging_color"
+        android:title="@string/battery_bar_charging_color"
+        android:defaultValue="0xffffc90f" />
+
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="statusbar_battery_bar_animate"
-        android:title="@string/battery_bar_animate_title" />
+        android:title="@string/battery_bar_animate_title"
+        android:defaultValue="true" />
 
 </PreferenceScreen>
