Statusbar Custom Logos [2/2]
Change-Id: I4b2f499c3c6faf5a1d81d9ab4d11f27052b2c19b

--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -26,6 +26,11 @@
     </Preference>
 
     <Preference
+        android:key="statusbar_logos"
+        android:fragment="com.nitrogen.settings.fragments.StatusbarLogo"
+        android:title="@string/statusbar_logos" />
+
+    <Preference
         android:key="status_bar_clock"
         android:fragment="com.nitrogen.settings.fragments.StatusBarClockSettings"
         android:title="@string/status_bar_clock_title" />
