Statusbar Custom Logos [2/2]
Change-Id: I4b2f499c3c6faf5a1d81d9ab4d11f27052b2c19b

--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -43,6 +43,11 @@
             settings:allowDividerAbove="false" />
 
     <Preference
+        android:key="status_bar_logos"
+        android:fragment="com.nitrogen.settings.fragments.StatusbarLogo"
+        android:title="@string/status_bar_logos" />
+
+    <Preference
             android:key="carrier_label"
             android:fragment="com.nitrogen.settings.fragments.CarrierLabel"
             android:title="@string/carrierlabel_title" />
