--- a/res/xml/nitrogen_settings_statusbar.xml
+++ b/res/xml/nitrogen_settings_statusbar.xml
@@ -36,6 +36,12 @@
         android:title="@string/status_bar_clock_title" />
 
     <Preference
+            android:key="status_bar_weather"
+            android:title="@string/status_bar_weather_title"
+            android:summary="@string/status_bar_weather_summary"
+            android:fragment="com.nitrogen.settings.fragments.StatusBarWeather" />
+
+    <Preference
             android:key="carrier_label"
             android:fragment="com.nitrogen.settings.fragments.CarrierLabel"
             android:title="@string/carrierlabel_title" />
