--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -883,4 +883,7 @@
     <string name="status_bar_temperature_hide_scale_hide_image">Display only temp without scale</string>
     <string name="status_bar_show_image">Display only condition image</string>
     <string name="status_bar_weather_image_color_title">Condition image color</string>
+
+    <string name="data_disabled_icon_title">Show data disabled icon</string>
+    <string name="data_disabled_icon_summary">Display the cross next to statusbar when data is disabled</string>
 </resources>
