--- a/res/xml/statusbar_logo.xml
+++ b/res/xml/statusbar_logo.xml
@@ -2,6 +2,10 @@
 
 <PreferenceScreen
 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    android:title="@string/statusbar_logos">
+
        <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
             android:key="status_bar_crdroid_logo"
             android:title="@string/status_bar_crdroid_logo_title"
