--- a/res/xml/nitrogen_settings_misc.xml
+++ b/res/xml/nitrogen_settings_misc.xml
@@ -23,6 +23,12 @@
             android:fragment="com.nitrogen.settimgs.fragments.Weather"
             android:title="@string/weather_title" />
 
+         <Preference
+            android:key="suspend_actions"
+            android:title="@string/screen_state_toggles_title"
+            android:summary="@string/screen_state_toggles_summary_opt"
+            android:fragment="com.nitrogen.settings.fragments.SuspendActions" />
+
         <Preference
              android:key="wakelock_blocker"
              android:fragment="com.nitrogen.settings.fragments.WakeLockBlocker"
