Revert "Revert "Unlock keystore with fingerprint after reboot (2/2)""
This reverts commit 11429feaeb83729b94860b75328dcdaa38cc603a.

--- a/res/xml/nitrogen_settings_misc.xml
+++ b/res/xml/nitrogen_settings_misc.xml
@@ -20,7 +20,7 @@
 
          <Preference
             android:key="weather"
-            android:fragment="com.nitrogen.settimgs.fragments.Weather"
+            android:fragment="com.nitrogen.settings.fragments.Weather"
             android:title="@string/weather_title" />
 
          <Preference
