--- a/res/xml/nitrogen_settings_lockscreen.xml
+++ b/res/xml/nitrogen_settings_lockscreen.xml
@@ -55,4 +55,9 @@
         android:summary="@string/face_auto_unlock_summary"
         android:defaultValue="false" />
 
+    <SwitchPreference
+        android:key="fp_unlock_keystore"
+        android:title="@string/fp_unlock_keystore_title"
+        android:summary="@string/fp_unlock_keystore_summary"
+        android:persistent="false" />
 </PreferenceScreen>
