--- a/res/xml/nitrogen_settings_misc.xml
+++ b/res/xml/nitrogen_settings_misc.xml
@@ -29,6 +29,13 @@
             android:summary="@string/screen_state_toggles_summary_opt"
             android:fragment="com.nitrogen.settings.fragments.SuspendActions" />
 
+        <PreferenceScreen
+            android:key="rr_blur"
+            android:fragment="com.nitrogen.settings.fragments.BlurPersonalizations"
+            android:title="@string/settings_blur_cat"
+            android:summary="@string/settings_blur_sum"
+            android:icon="@drawable/rr_blur_icon"/>
+
         <Preference
              android:key="wakelock_blocker"
              android:fragment="com.nitrogen.settings.fragments.WakeLockBlocker"
